# brainwrought

./: .env.example  .gitignore  README.md  app.py  clips_material.txt  graph.mmd  pyproject.toml
.github/instructions/: copilot_instruction.instructions.md
mcp-servers/: README.md
modal_functions/: README.md  ltx_video.py  renderer.py
remotion_src/: Dockerfile  README.md  input_props.json  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
remotion_src/src/: Composition.tsx  Root.tsx  schema.ts
remotion_src/src/components/: MediaLayer.tsx  MemeLayer.tsx  SceneManager.tsx  WordLevelSubtitles.tsx
src/: app.py  app_space.py  config.py  generate_graphs.py  states.py
src/agents/: ingestion_agents.py  llm_utils.py  meme_agents.py  production_agents.py  story_agents.py  voice_designer.py
src/graphs/: hook_meme.py  ingestion.py  main_graph.py  production.py  production_mock.py  story_studio.py
src/models/: __init__.py  meme_models.py  story_models.py
src/nodes/: __init__.py  assets.py  ingestion.py  meme.py  production.py  story.py
src/tools/: __init__.py  mcp_clients.py  search_tools.py
src/utils/: cache.py  llm_utils.py  voice_designer.py
tests/: call_modal_renderer.py  conftest.py  test_meme_generation.py  test_production_agents_integration.py  test_voice_timing.py
tools/: setup_remotion_dev.py  sync_assets.py
