[project]
name = "brainwrought"
version = "0.1.0"
description = "PDF to Brainrot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
]
