[project]
name = "brainwrought"
version = "0.1.0"
description = "PDF to Brainrot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "elevenlabs>=2.24.0",
    "gradio>=5.49.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "modal>=1.2.4",
    "pypdf>=6.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Custom markers
markers = [
    "integration: marks tests as integration tests requiring API keys (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running tests",
]

# Default options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
